[package]
name = "db-map"
version = "0.1.0"
edition = "2021"
description = "A local, Send & Sync, key-value store that acts like a HashMap"
license = "Unlicense"
repository = "https://github.com/Inspirateur/db-map"
keywords = ["key-value-store", "hashmap", "dictionary", "persistent", "local"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
anyhow = "*"
